--- a/src/app/shared/components/sidebar-r/sidebar-r.component.html
+++ b/src/app/shared/components/sidebar-r/sidebar-r.component.html
@@ -6,11 +6,13 @@
     <a href="#">Contact</a> -->
 
 
+    <div class="ml-4 mt-5 text-center" *ngIf="userObj">
+        <h5 class="name">{{userObj.username}}</h5>
+        <span>Student</span>
+    </div>
 
 
-    <h5 class="name">John Doe</h5>
-    <span>Student</span>
-
+   
 
 
     <div class="ml-4 mt-5">
@@ -33,29 +35,32 @@
         </div>
 
         <h5 class="mt-5 mb-4">Remiders <i class="fa-solid fa-bell"></i></h5>
-        <div *ngFor="let rem of remindersArray">
-            <div class="d-flex">
-                <span class="msg1"><i class="fa-regular fa-envelope "></i></span>
-                <div class="ml-3">
-                    <p class="mb-0">{{rem.title}}</p>
-                    <p class="date">{{rem.datetime | date : 'fullDate'}}</p>
+        <div  *ngIf="remindersArray.length > 0">
+            <div *ngFor="let rem of remindersArray" >
+                <div class="d-flex" >
+                    <span class="msg1"><i class="fa-regular fa-envelope "></i></span>
+                    <div class="ml-3">
+                        <p class="mb-0">{{rem.title}}</p>
+                        <p class="date">{{rem.datetime | date : 'fullDate'}}</p>
+                    </div>
                 </div>
             </div>
         </div>
+        
     </div>
 </div>
 
 
 <div id="mySidenav" class="sidenav2 shadow-lg" #mySidenav2>
     <a href="javascript:void(0)" class="closebtn" (click)="closeNav2(mySidenav2)">&times;</a>
-    <a href="#" class="sactive"><i class="fa-solid fa-box  mr-3 "></i>Dashboard</a>
-    <a href="#"><i class="fa-solid fa-message  mr-3"></i>Massages</a>
-    <a href="#"><i class="fa-solid fa-user-group mr-2"></i> Customers</a>
-    <a href="#"><i class="fa-solid fa-play  mr-3"></i>Campaigns</a>
-    <a href="#"><i class="fa-regular fa-calendar-days  mr-3"></i>Calender</a>
-    <a href="#"><i class="fa-solid fa-align-center  mr-3"></i>Content</a>
-    <a href="#"><i class="fa-solid fa-video  mr-3"></i>Videos</a>
-    <a href="#"><i class="fa-regular fa-file  mr-3"></i>Lists</a>
+    <a routerLink="/" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}" class=""><i class="fa-solid fa-box  mr-3 "></i>Dashboard</a>
+    <a routerLink="/msg" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}"><i class="fa-solid fa-message  mr-3"></i>Massages</a>
+    <a routerLink="/customer" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}"><i class="fa-solid fa-user-group mr-2"></i> Customers</a>
+    <a routerLink="/campaigns" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}"><i class="fa-solid fa-play  mr-3"></i>Campaigns</a>
+    <a routerLink="/calender" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}"><i class="fa-regular fa-calendar-days  mr-3"></i>Calender</a>
+    <a routerLink="/content" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}"><i class="fa-solid fa-align-center  mr-3"></i>Content</a>
+    <a routerLink="/videos" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}"><i class="fa-solid fa-video  mr-3"></i>Videos</a>
+    <a routerLink="/lists" routerLinkActive="sactive" [routerLinkActiveOptions]="{exact: true}"><i class="fa-regular fa-file  mr-3"></i>Lists</a>
 </div>
 
 
